--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -46,4 +46,14 @@
         android:text="act3"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/PlaceholderFragmentBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/button2"
+        android:onClick="replaceFragment"
+        android:text="Fragment1"
+        tools:ignore="HardcodedText" />
+
 </RelativeLayout>
